기존 테스트에 @DisplayName 추가, ExecutorService try-with-resources 정리
모든 테스트 클래스/메서드에 한국어 @DisplayName을 붙여서 테스트
리포트만 보고도 무엇을 검증하는지 알 수 있게 했다.

ExecutorService/ScheduledExecutorService를 명시적 shutdown() 대신
try-with-resources로 관리하도록 정리 (JDK 19+에서 AutoCloseable을
구현하므로 'used without try-with-resources' 경고를 없앤다).

CacheFallbackApplication의 main()도 IDE가 제안한 대로 public 제거.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>