@@ -13,9 +13,9 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -29,6 +29,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 @SpringBootTest
+@DisplayName("동시성 시나리오 (single-flight, 분산 miss, 락 경합 규모)")
 class PropertyServiceConcurrencyTest {
 
     @Autowired
@@ -52,39 +53,40 @@ class PropertyServiceConcurrencyTest {
     }
 
     @Test
+    @DisplayName("동일 key 100개 동시 요청 -> single-flight로 DB 조회는 1번만 나간다")
     void sameKey100ConcurrentRequests_hitsDbOnlyOnce() throws InterruptedException {
         PropertyData saved = propertyRepository.save(new PropertyData("동시성-DB-값", 700L));
         Long id = saved.getId();
         redisTemplate.delete("property:" + id);
 
         int threadCount = 100;
-        ExecutorService executor = Executors.newFixedThreadPool(threadCount);
         CountDownLatch ready = new CountDownLatch(threadCount);
         CountDownLatch start = new CountDownLatch(1);
         CountDownLatch done = new CountDownLatch(threadCount);
         List<AtomicReference<PropertyData>> results = IntStream.range(0, threadCount)
                 .mapToObj(i -> new AtomicReference<PropertyData>())
-                .collect(Collectors.toList());
+                .toList();
 
-        for (int i = 0; i < threadCount; i++) {
-            int idx = i;
-            executor.submit(() -> {
-                ready.countDown();
-                try {
-                    start.await();
-                    results.get(idx).set(propertyService.getProperty(id));
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                } finally {
-                    done.countDown();
-                }
-            });
+        try (ExecutorService executor = Executors.newFixedThreadPool(threadCount)) {
+            for (int i = 0; i < threadCount; i++) {
+                int idx = i;
+                executor.submit(() -> {
+                    ready.countDown();
+                    try {
+                        start.await();
+                        results.get(idx).set(propertyService.getProperty(id));
+                    } catch (InterruptedException e) {
+                        Thread.currentThread().interrupt();
+                    } finally {
+                        done.countDown();
+                    }
+                });
+            }
+
+            ready.await();
+            start.countDown();
+            assertTrue(done.await(10, TimeUnit.SECONDS), "100개 요청이 10초 안에 끝나야 한다");
         }
-
-        ready.await();
-        start.countDown();
-        assertTrue(done.await(10, TimeUnit.SECONDS), "100개 요청이 10초 안에 끝나야 한다");
-        executor.shutdown();
 
         for (AtomicReference<PropertyData> result : results) {
             assertEquals(saved.getName(), result.get().getName());
@@ -93,6 +95,7 @@ class PropertyServiceConcurrencyTest {
     }
 
     @Test
+    @DisplayName("서로 다른 key 100개 동시 miss -> key마다 정확히 1번씩만 DB 조회한다")
     void differentKeys100ConcurrentMisses_allResolveCorrectlyWithOneDbCallEach() throws InterruptedException {
         int keyCount = 100;
         List<PropertyData> saved = new ArrayList<>();
@@ -102,34 +105,34 @@ class PropertyServiceConcurrencyTest {
             saved.add(data);
         }
 
-        ExecutorService executor = Executors.newFixedThreadPool(keyCount);
         CountDownLatch ready = new CountDownLatch(keyCount);
         CountDownLatch start = new CountDownLatch(1);
         CountDownLatch done = new CountDownLatch(keyCount);
         List<AtomicReference<PropertyData>> results = IntStream.range(0, keyCount)
                 .mapToObj(i -> new AtomicReference<PropertyData>())
-                .collect(Collectors.toList());
+                .toList();
 
-        for (int i = 0; i < keyCount; i++) {
-            int idx = i;
-            Long id = saved.get(idx).getId();
-            executor.submit(() -> {
-                ready.countDown();
-                try {
-                    start.await();
-                    results.get(idx).set(propertyService.getProperty(id));
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                } finally {
-                    done.countDown();
-                }
-            });
+        try (ExecutorService executor = Executors.newFixedThreadPool(keyCount)) {
+            for (int i = 0; i < keyCount; i++) {
+                int idx = i;
+                Long id = saved.get(idx).getId();
+                executor.submit(() -> {
+                    ready.countDown();
+                    try {
+                        start.await();
+                        results.get(idx).set(propertyService.getProperty(id));
+                    } catch (InterruptedException e) {
+                        Thread.currentThread().interrupt();
+                    } finally {
+                        done.countDown();
+                    }
+                });
+            }
+
+            ready.await();
+            start.countDown();
+            assertTrue(done.await(15, TimeUnit.SECONDS), "서로 다른 key 100개가 15초 안에 끝나야 한다");
         }
-
-        ready.await();
-        start.countDown();
-        assertTrue(done.await(15, TimeUnit.SECONDS), "서로 다른 key 100개가 15초 안에 끝나야 한다");
-        executor.shutdown();
 
         for (int i = 0; i < keyCount; i++) {
             assertEquals(saved.get(i).getName(), results.get(i).get().getName());
@@ -138,6 +141,7 @@ class PropertyServiceConcurrencyTest {
     }
 
     @Test
+    @DisplayName("락 경합 중 50개 동시 요청 -> 전부 stale 값을 받고 DB는 안 건드린다")
     void manyConcurrentRequestsDuringLockContention_allReturnStaleLocalWithoutTouchingDb()
             throws InterruptedException {
         PropertyData saved = propertyRepository.save(new PropertyData("실제-DB-값", 800L));
@@ -151,15 +155,14 @@ class PropertyServiceConcurrencyTest {
         assertTrue(token.isPresent(), "테스트 스레드가 먼저 락을 잡아 경합 상황을 만들어야 한다");
 
         int threadCount = 50;
-        ExecutorService executor = Executors.newFixedThreadPool(threadCount);
         CountDownLatch ready = new CountDownLatch(threadCount);
         CountDownLatch start = new CountDownLatch(1);
         CountDownLatch done = new CountDownLatch(threadCount);
         List<AtomicReference<PropertyData>> results = IntStream.range(0, threadCount)
                 .mapToObj(i -> new AtomicReference<PropertyData>())
-                .collect(Collectors.toList());
+                .toList();
 
-        try {
+        try (ExecutorService executor = Executors.newFixedThreadPool(threadCount)) {
             for (int i = 0; i < threadCount; i++) {
                 int idx = i;
                 executor.submit(() -> {
@@ -178,7 +181,6 @@ class PropertyServiceConcurrencyTest {
             ready.await();
             start.countDown();
             assertTrue(done.await(10, TimeUnit.SECONDS), "50개 요청이 10초 안에 끝나야 한다");
-            executor.shutdown();
         } finally {
             distributedLock.unlock(lockKey, token.get());
         }
